fix:  change url to fonts and align text

--- a/singolo1.css
+++ b/singolo1.css
@@ -1,55 +1,55 @@
 @font-face {
   font-family: "Lato";
-  src: url("../assets/fonts/Lato-Black.ttf") format('truetype');
+  src: url("assets/fonts/Lato-Black.ttf") format('truetype');
   font-weight: 900;
 }
 
 @font-face {
   font-family: "Lato";
-  src: url("../assets/fonts/Lato-Heavy.ttf") format('truetype');
+  src: url("assets/fonts/Lato-Heavy.ttf") format('truetype');
   font-weight: 800;
 }
 
 @font-face {
   font-family: "Lato";
-  src: url("../assets/fonts/Lato-Bold.ttf") format('truetype');
+  src: url("assets/fonts/Lato-Bold.ttf") format('truetype');
   font-weight: 700;
 }
 
 @font-face {
   font-family: "Lato";
-  src: url("../assets/fonts/Lato-Semibold.ttf") format('truetype');
+  src: url("assets/fonts/Lato-Semibold.ttf") format('truetype');
   font-weight: 600;
 }
 
 @font-face {
   font-family: "Lato";
-  src: url("../assets/fonts/Lato-Medium.ttf") format('truetype');
+  src: url("assets/fonts/Lato-Medium.ttf") format('truetype');
   font-weight: 500;
 }
 
 
 @font-face {
   font-family: "Lato";
-  src: url("../assets/fonts/Lato-Regular.ttf") format('truetype');
+  src: url("assets/fonts/Lato-Regular.ttf") format('truetype');
   font-weight: 400;
 }
 
 @font-face {
   font-family: "Lato";
-  src: url("../assets/fonts/Lato-Light.ttf") format('truetype');
+  src: url("assets/fonts/Lato-Light.ttf") format('truetype');
   font-weight: 300;
 }
 
 @font-face {
   font-family: "Lato";
-  src: url("../assets/fonts/Lato-Thin.ttf") format('truetype');
+  src: url("assets/fonts/Lato-Thin.ttf") format('truetype');
   font-weight: 200;
 }
 
 @font-face {
   font-family: "Lato";
-  src: url("../assets/fonts/Lato-Hairline.ttf") format('truetype');
+  src: url("assets/fonts/Lato-Hairline.ttf") format('truetype');
   font-weight: 100;
 }
 
@@ -80,18 +80,19 @@ header {
 
 /*Logotype (Логотип)*/
 .logotype {
-  margin: 33.5px 0px 35px 40px;
+  margin: 33.3px 0px 35px 40px;
   text-decoration: none;
 }
 
 h1 {
   display: inline-block;
   position: relative;
-  font-size: 25px;
-  line-height: 25px;
-  letter-spacing: -0.5px;
+  font-size: 27px;
+  line-height: 27px;
+  letter-spacing: -1.8px;
   color: #ffffff;
-  font-weight: 500;
+  font-weight: 600;
+  font-stretch: extra-condensed;
   text-align: justify;
   text-transform: uppercase;
 }
@@ -106,23 +107,23 @@ h1::after {
   display: flex;
   flex-wrap: nowrap;
   justify-content: space-between; 
-  margin: 45px 40px 35px 0px;
+  margin: 41px 40px 35px 0px;
   padding: 0px;
 }
 
 .navigation-item{
   display: inline-block;
   list-style: none;
-  margin-left: 18.97px;
-  letter-spacing: -1.1px;
+  margin-left: 20px;
+  letter-spacing: -1.3px;
 }
 
 .navigation-item:not(:last-child)::after {
   content: ".";
   display: inline-block;
   position: relative;
-  right: -9px;
-  top: -4px;
+  right: -11px;
+  top: -3px;
   color: #494e62;
 }
 
@@ -131,7 +132,7 @@ h1::after {
   text-transform: uppercase;
   font-size: 12px;
   letter-spacing: 0px;
-  font-weight: 500;
+  font-weight: 400;
   color: #ffffff;
   transition: 0.27s ease-out;
 }
@@ -228,11 +229,11 @@ h1::after {
   color: #767e9e;
   line-height: 30px;
   text-align: justify;
-  letter-spacing: -0.2205px;
+  letter-spacing: -0.22px;
 }
 
 .services-description--second {
-  letter-spacing: -0.105px;
+  letter-spacing: -0.11px;
 }
 
 /*Services content*/
@@ -284,7 +285,7 @@ h1::after {
   font-size: 12px;
   font-weight: 400;
   margin-top: 7px;
-  line-height: 21.5px;
+  line-height: 21.95px;
   text-align: justify;
   letter-spacing: -0.05px;
   overflow: hidden;
